syntax = "proto3";

package user;

option go_package = "./user";

service UserService {
    rpc SaveUser(SaveUserRequest) returns (SaveUserResponse);
    rpc GetUserByID(UserRequest) returns (UserResponse);
}

message SaveUserRequest {
    string FirstName = 1;
    string LastName = 2;
}

message SaveUserResponse {
    string ID = 1;
}

message UserRequest {
    string ID = 1;
}

message UserResponse {
    string FirstName = 1;
    string LastName = 2;
}
